files/backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: counter-backend
    sandbox: counter-backend
    learn-kubernetes: counter-backend
  name: counter-backend
spec:
  port:
    targetPort: 10000-tcp
  to:
    kind: Service
    name: counter-backend
